# nbody-relaxed

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .rsync  README.md  environment.yml  minh.md  pyproject.toml  requirements.txt  setup.py  sftp-config.json
.github/workflows/: codeql-analysis.yml
bins/: run_write_main_line_progenitors.py
configs/: bolshoi_m12.yaml
consistent-trees/read_tree/: example.c
data/configs/: all_vars.txt  rockstar_vars.md
data/params/: Bolshoi.config  BolshoiP.config  full_type_index.txt  name_index.txt
data/processed/: alpha_fits.npy
data/processed/tng/: README.txt
figures/code/: plots1.py
html/: plots-wang2020.html  predictions1.html
intro/: batch.sh  download.py  intro1.ipynb  make_csv.py  plots.py  plotting.py  read.py  save_main_progenitors.py  save_one_progenitor.py  sbatch_utils.py
intro/consistent-trees/read_tree/: example.c
intro/data/: README_hlist  README_trees  descriptions.txt
intro/notebooks/: correlations1.ipynb  intro1.ipynb
intro/src/: Params.py  Plot.py  __init__.py  plot_funcs.py  remote_utils.py  stats.py  utils.py
intro/src/batches/: gunzip.sh
intro/src/plots/: plots1.py
intro/src/pys/: gz_to_csv.py  test_opening_hlists.py
intro/temps/pys/: gz_to_csv.py
jupyter/: 01-play-with-ytree.ipynb  02-test-filters.ipynb  02-test-frames.ipynb  03-test-substructure-fraction.ipynb  gaussian_prediction.ipynb  overview.ipynb  plots-wang2020.ipynb
jupyter/exploratory/: 01-initial-correlation-plots.ipynb  01-intro1.ipynb  01-intro2.ipynb  01-play-with-ytree.ipynb  02-test-filters.ipynb  02-test-frames.ipynb  03-test-substructure-fraction.ipynb  04-test-minh.ipynb  05-test-progenitors.ipynb  06-combine-table-progenitors.ipynb  06-revive-plotting.ipynb  07-vanilla-marker-plot.ipynb  combine-table-progenitors.ipynb
jupyter/exploratory/kllr/: example1.ipynb  example_py.py
jupyter/plots/: fit-predicted-alpha.ipynb  gradients.ipynb  overview.ipynb  plots-wang2020.ipynb  predictions1.ipynb  predictions2.ipynb
multicam/: cosmo.py  fits.py  gradients.py  mah.py  minh.py  models.py  parameters.py  pipeline.py  plotting.py  sims.py  utils.py
multicam/progenitors/: io_progenitors.py  progenitor_lines.py
multicam/subhaloes/: __init__.py  binning.py  catalog.py  cy_binning.c  cy_binning.pyx
multicam/tng/: preprocess_trees.py  utils.py
notebooks/current/: MM-scales.ipynb  cartoon.ipynb  current.ipynb  diffmah-ranks-no-ranks.ipynb  diffmah_curve_preds.ipynb  diffmah_curves.ipynb  mm-bins-pred.ipynb  mpeak_errs.ipynb  temp.ipynb
notebooks/exploratory/: andrews-fits.ipynb  debug-multicam-notebook.ipynb  diffmah_curves.ipynb  extract-MM-scales2.ipynb  latex-works.ipynb  mm-bins-pred.ipynb
notebooks/exploratory/tng/: preprocess-trees.ipynb  sanity-check-one-mah.ipynb  tng-explore1.ipynb  tng2.ipynb  tng3.ipynb
notebooks/html/: fit-predicted-alpha.html  overview.html
notebooks/jupyter/exploratory/: aerosp.ipynb  base-distributions.ipynb  check-ma-am.ipynb  check-subhalo-snapshots.ipynb  extract-MM-scale.ipynb  extract-MM-scales2.ipynb
notebooks/jupyter/plots/: gradients.ipynb  merger-tree-info.ipynb  plots-wang2020.ipynb  prediction-gradients.ipynb  predictions.ipynb  predictions2.ipynb
notebooks/plots/: correlation-mah.ipynb  inverse-predict-metrics.ipynb  model-metrics.ipynb  models-metrics.ipynb  pred-am-vs-m.ipynb  predictions.ipynb  triangle.ipynb
notebooks/tutorials/: intro.ipynb
notebooks/wip/: MM-scales.ipynb  debug-predictions-08-28-23.ipynb  merger-prediction-peak.ipynb  merger-prediction.ipynb  minimal-break-multicam.ipynb  multicam-with-scatter-rank-test.ipynb  phil-new-merger-figure-xgboost.ipynb  phil-new-merger-figure.ipynb  tng-100-explore.ipynb  tng-initial-property-exploration.ipynb  tng1.ipynb  tng3.ipynb  tng4.ipynb  tng5.ipynb  tng_match.ipynb  xgboost-demo-with-multicam.ipynb  xgboost-demo.ipynb
output/: bolshoi_z_map.json  pbest_9900.npy  pbest_diffmah.npy
output/m12/: dm_cat.csv  final_table.csv
output/output_m11/: dm_cat.csv  logs.txt  subhaloes.csv  z_map.json
output/output_m12/: dm_cat.csv  ids.json  logs.txt  subhalo_log.txt  subhaloes.csv  z_map.json
output/subhalo/output_m11/: dm_cat.csv  ids.json
params/: Bolshoi.config  BolshoiP.config  convert_to_minh.py
relaxed/: analysis.py  catalogs.py  correlations.py  cosmo.py  filters.py  fits.py  gradients.py  halo_catalogs.py  halo_filter.py  halo_filters.py  halo_param.py  halo_parameters.py  hfilters.py  mah.py  markers.py  minh.py  models.py  parameters.py  params.py  pipeline.py  plot_defaults.py  plot_funcs.py  plots.py  plotting.py  sims.py  stats.py  utils.py
relaxed/frames/: catalogs.py  filters.py  markers.py  params.py  plots.py
relaxed/params/: params.py
relaxed/progenitors/: catalog.py  catalogs.py  io_progenitors.py  progenitor_lines.py  progenitors.py  save_progenitors.py
relaxed/subhaloes/: binning.py  catalog.py  cy_binning.c  cy_binning.pyx  quantities.py  setup.py
relaxed/subhalos/: binning.py  catalog.py  catalogs.py  setup.py  subhalo.py  subhaloes.py
relaxed/utils/: const.py  remote_utils.py  small.py  stats.py
relaxed/visualization/: __init__.py  plots1.py
relaxed/visualize/: plot_funcs.py  plots1.py
results/figs/: corrs_am.txt  corrs_ma.txt  max_corrs_am.txt  max_corrs_ma.txt  max_corrs_table.txt  triangle_corrs_table.txt
results/figs/cache/: correlations_mah.npy  covariance_am.npy  forward_pred_metrics.npy  inv_pred_metrics.npy  predict_mah.npy  triangle.npy
src/: Catalog.py  Params.py  Plot.py  __init__.py  plot_funcs.py  remote_utils.py  save_main_progenitors.py  stats.py  utils.py
src/frames/: __init__.py  catalogs.py  filters.py  params.py  plots.py
src/pys/: download_trees.py  gz_to_csv.py
src/utils/: __init__.py  const.py  remote_utils.py  small.py
src/visualization/: plot_funcs.py  plots1.py
tests/: __init__.py  test_catalogs.py  test_params.py  test_sub_quantities.py  test_was_central.py
writeups/: multi_gaussian.tex
