[tool.poetry]
authors = [
  "Ismael Mendoza <imendoza@umich.edu>",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Studies of relationship between dark matter halo present-day properties and their growth."
keywords = ["cosmology", "haloes", "dark-matter", "nbody", "simulation"]
license = "MIT"
name = "nbody_relaxed"
packages = [{include = "relaxed"}]
readme = "README.md"
repository = "https://github.com/ismael-mendoza/nbody-relaxed"
version = "0.0.1"

[tool.poetry.dependencies]
astropy = ">=4.3.1"
click = ">=7.1.2"
corner = ">=2.2.1"
diffmah = "^0.1.0"
findiff = ">=0.8.9"
flake8 = "^4.0.1"
ipywidgets = ">=7.6.5"
kllr = ">=1.0.0"
lmfit = "^1.0.3"
matplotlib = ">=3.5.0"
numpy = ">=1.21.4"
pminh = {git = "https://github.com/ismael-mendoza/minnow", branch = "master"}
python = ">=3.7,<3.11"
scikit-image = ">=0.18.3"
scikit-learn = ">=0.24.2"
scipy = ">=1.7.3"

[tool.poetry.dev-dependencies]
Cython = "^0.29.24"
black = ">=22.1.0"
flake8 = ">=3.9.2"
flake8-absolute-import = ">=1.0.0"
jupyter-contrib-nbextensions = ">=0.5.1"
jupyter-sphinx = ">=0.3.2"
jupyterlab = ">=3.2.5"
mock = ">=3.0.5"
pre-commit = ">=2.16.0"
pybind11 = ">=2.8.1"
pytest = ">=6.2.5"
pytest-cov = ">=2.12.1"
reorder-python-imports = ">=2.6.0"
sphinx = ">=3.5.4"
sphinx-rtd-theme = ">=0.4.3"
wheel = ">=0.36.2"
widgetsnbextension = ">=3.5.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ismael-mendoza/nbody-relaxed/issues"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses:DeprecationWarning",
]
minversion = "6.0"
testpaths = ['tests']
