[tool.poetry]
authors = [
  "Ismael Mendoza <imendoza@umich.edu>",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Studies of relationship between dark matter halo present-day properties and their growth."
keywords = ["cosmology", "haloes", "dark-matter", "nbody", "simulation"]
license = "MIT"
name = "nbody_relaxed"
packages = [{include = "relaxed"}]
readme = "README.md"
repository = "https://github.com/ismael-mendoza/nbody-relaxed"
version = "0.0.1"

[tool.poetry.dependencies]
astropy = ">=4.3.1"
click = ">=8.0.0"
colossus = ">=1.2.19"
corner = ">=2.2.1"
findiff = ">=0.8.9"
flake8 = ">=4.0.1"
lmfit = ">=1.0.3"
matplotlib = ">=3.5.1, !=3.6.0"
numpy = ">=1.22.0"
pminh = {git = "https://github.com/ismael-mendoza/minnow", branch = "master", markers = "sys_platform == 'linux'"}
python = ">=3.8,<3.12"
scikit-learn = ">=1.0.0"
scipy = ">=1.7.3"
tqdm = ">=4.63.0"

[tool.poetry.dev-dependencies]
Cython = ">=0.29.24"
black = ">=22.1.0"
flake8 = ">=4.0.1"
isort = ">=5.10.1"
jupyter-contrib-nbextensions = ">=0.5.1"
mistune = ">=2.0.3"
pre-commit = ">=2.16.0"
pytest = ">=6.2.5"
pytest-cov = ">=2.12.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ismael-mendoza/nbody-relaxed/issues"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["relaxed", "bin", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses:DeprecationWarning",
]
minversion = "6.0"
testpaths = ['tests']
