[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"


[project]
name = "multicam"
authors = [{ name = "Ismael Mendoza" }]
description = "Studies of relationship between dark matter halo present-day properties and their growth."
version = "0.0.1"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
  "astropy >=4.3.1",
  "click >=8.0.0",
  "colossus >=1.2.19",
  "corner >=2.2.1",
  "findiff >=0.8.9",
  "lmfit >=1.0.3",
  "matplotlib >=3.6.1",
  "numpy >=1.22.0",
  "scikit-learn >=1.0.0",
  "scipy >=1.7.3",
  "tqdm >=4.63.0",
  "h5py >=3.9.0",
  "pandas >=2.1.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "ipython", "ipykernel"]

[project.urls]
home = "https://github.com/ismael-mendoza/multicam"

[tool.setuptools.packages.find]
include = ["multicam*"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

exclude = ["*.ipynb"]


[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "SIM", "PLE", "PLC", "PLW", "RUF"]
ignore = [
  "C901", # I want to decide what is 'too' complex
  "E501", # I don't care about formatting docstrings
  "E731", # I like lambda's sometimes
  "PLC0206", # too picky, not always useful
  "RUF027", # does not account for shell scripts correctly
  "RUF052", # I find underscore variables useful
]
preview = true
exclude = ["*.ipynb"]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ['tests']
